2006-11-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/input.cc: 
	end context snippet with '\n'

	* lily/parse-scm.cc: 
	catch all GUILE exceptions

	* VERSION: 
	bump version

	* lily/include/lily-lexer.hh: 
	* lily/lily-lexer.cc: 
	* lily/lily-parser.cc: 
	Lily_parser* arg for copy ctor too.

	* scripts/abc2ly.py: 
	abc2ly new tempo syntax

2006-11-04  Heikki Junes  <hjunes@gmail.com>

	* po/fi.po: update Finnish translation.

2006-11-03  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ {various}: rename page->spacing,
	global->non-music, invoking->running, example->templates.

2006-11-03  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/display-lily.scm: add a parser argument to display methods,
	instead of using a *parser* special variable.

	* scm/define-music-display-methods.scm: add a parser argument to
	display methods. Update the methods for \melisma, \melismaEnd,
	\breathe, \tempo, \partial.

	* input/no-notation/display-lily-tests.ly: update the test
	utilities according to the changes in display-lily.scm

2006-11-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* *: The Joy of Merging.

	* buildscripts/git-update-changelog.py: 
	sort commits, and use .git-commits-done file.

	* GNUmakefile.in: 
	* elisp/GNUmakefile: 
	dist emacs patches too.

2006-11-02  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/autochange.scm: 
	autochange thinko.

	* lily/context-def.cc: 
	* lily/include/parse-scm.hh: 
	* lily/include/smobs.hh: 
	* lily/parse-scm.cc: 
	* lily/prob.cc: 
	* lily/program-option.cc: 
	* scm/lily.scm: 
	implement and use ASSERT_LIVE_IS_ALLOWED()

	* ly/music-functions-init.ly: 
	* scm/autochange.scm: 
	set-part-combine fix for autochange.

	* lily/include/lily-lexer.hh: 
	* lily/include/lily-parser.hh: 
	* lily/lily-lexer.cc: 
	* lily/lily-parser-scheme.cc: 
	* lily/lily-parser.cc: 
	clear lexer scopes after parsing file. Plugs pseudo memory leak

	* ly/declarations-init.ly: 
	* ly/music-functions-init.ly: 
	* scm/part-combiner.scm: 