@@ -3,7 +3,8 @@
   texidoc = "  The handling of stems for harmonic notes must be
    completely identical to normal note heads.
 
-  Harmonic heads do not get  dots. If @code{harmonicAccidentals} is unset, they also don't get accidentals."
+  Harmonic heads do not get dots. If @code{harmonicAccidentals} is
+  unset, they also don't get accidentals."
 
   
 }
